Fixed some code and fixed horizontal scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,16 @@
   font-family: 'Poppins', sans-serif, bold;
 }
 
-html, body, .container, .container-fluid {
+html, body, .homecontainer {
   width: 100%;
   height: 100%;
   /* Prevent horizontal overflow (horizontal scrollbar will appear otherwise) */
   /*overflow-x: hidden;*/
+}
+
+.row {
+  margin-right: 0;
+  margin-left: 0;
 }
 
 /* Smoother hover links */
@@ -376,6 +381,11 @@ section.about {
 /** ==================================== **/
 section.work {
   margin-bottom: 60px;
+}
+
+.workrow {
+  margin-right: 0;
+  margin-left: 0;
 }
 
 .mywork {
